I forgot to add on the last commit that I got rid of the circle which was at the bottom of the page. But for this commit I have moved the menu bar so that it spans across the whole of the top. I have also made a logo and put that in where the logo use to be. I have commented out a menu which is just made out of the a twelve column. But I need to find a away of getting rid of the gap between the menu and the logo and fix the menu bar to the top which still isn't working.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -51,23 +51,37 @@
   font-family: 'Work Sans', sans-serif; this is the font that I want to use
 }*/
 
-.three.columns{
-  border-radius: 5px;
-  background-color: black;
-  height:30px;
+.twelve.columns nav ul li{
+  text-align: center;
+  display: inline-block;
+  width:170px; /* fixed width */
   font-family: 'moon';
   color; white;
+  text-decoration: none;
+}
+
+
+.three.columns{
+  /*border-radius: 5px;*/
+  background-color: whitesmoke;
+  height:50px;
+  font-family: 'moon';
+  font-color; white !important;
   text-decoration: none;
   
 }
 
+.three.columns img{
+  height: 60px;
+}
+
 .nine.columns{
-  border-radius: 5px;
-  background-color: black;
+  /*border-radius: 5px;*/
+  background-color: whitesmoke;
   font-family: 'moon';
   color; white;
   text-decoration: none;
-  height: 30px;
+  height: 50px;
   font-size: 13px;
 }
 
@@ -81,7 +95,7 @@
 }
 
 .four.columns{
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   background-color: #ebe7f2;
   text-align: center;
   height: 330px;
